# Cassidy

./: .gitignore  .gitmodules  CMakeLists.txt  Cassidy.sln  README.md
Cassidy/: CMakeLists.txt  Cassidy.vcxproj  Cassidy.vcxproj.filters  Engine.cpp  Engine.h  Helpers.cpp  Helpers.h  Initialisers.cpp  Initialisers.h  Renderer.cpp  Renderer.h  Types.h  imgui.ini  main.cpp
Cassidy/Core/: AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  DescriptorBuilder.cpp  DescriptorBuilder.h  Engine.cpp  Engine.h  EventHandler.cpp  EventHandler.h  InputHandler.cpp  InputHandler.h  Logger.h  Material.cpp  Material.h  MaterialLibrary.cpp  MaterialLibrary.h  Mesh.cpp  Mesh.h  ModelManager.cpp  ModelManager.h  Pipeline.cpp  Pipeline.h  PostProcessStack.cpp  PostProcessStack.h  PrimitiveMeshes.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Texture.cpp  Texture.h  TextureLibrary.cpp  TextureLibrary.h  WorkerThread.cpp  WorkerThread.h
Cassidy/Utils/: DescriptorBuilder.cpp  DescriptorBuilder.h  GlobalTimer.cpp  GlobalTimer.h  Helpers.cpp  Helpers.h  Initialisers.cpp  Initialisers.h  Keycode.h  MouseCode.h  Types.h
Meshes/Backpack/: Thumbs.db
Meshes/Helmet/: DamagedHelmet.fbx
Shaders/: CompileShaders.bat  gammaCorrect.comp  gammaCorrectComp.spv  helloTriangle.frag  helloTriangle.vert  helloTriangleFrag.spv  helloTriangleVert.spv  phongLighting.frag  phongLightingFrag.spv
